--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 									</header>
 									<div class="content">
 										<div class="media">
-											<a href="file:///C:/Users/7ll%27/Documents/GitHub/operaeventts.github.io/images/IMG-20190706-WA0060.jpg"><img src="file:///C:/Users/7ll%27/Documents/GitHub/operaeventts.github.io/images/IMG-20190706-WA0060.jpg" alt="" title="This right here is a caption." /></a>
+											<a href="images/IMG-20190706-WA0060.jpg"><img src="images/IMG-20190706-WA0060.jpg" alt="" title="This right here is a caption." /></a>
 										</div>
 										
 										<div class="media">
