--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 										
 										<div class="media">
 	
-											<a href="file:///C:/Users/7ll%27/Documents/GitHub/operaeventts.github.io/images/IMG-20190706-WA0029.jpg"><img src="file:///C:/Users/7ll%27/Documents/GitHub/operaeventts.github.io/images/IMG-20190706-WA0029.jpg" title="This right here is a caption." /></a>
+											<a href="images/IMG-20190706-WA0029.jpg"><img src="images/IMG-20190706-WA0029.jpg" title="This right here is a caption." /></a>
 										</div>
 										<div class="media">
 											<a href="file:///C:/Users/7ll%27/Documents/GitHub/operaeventts.github.io/images/IMG-20190706-WA0028.jpg"><img src="file:///C:/Users/7ll%27/Documents/GitHub/operaeventts.github.io/images/IMG-20190706-WA0028.jpg" title="This right here is a caption." /></a>
