--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 											<a href="images/thumbs/IMG-20190531-WA0056.jpg"><img src="images/thumbs/IMG-20190531-WA0056.jpg" alt="" title="This right here is a caption." /></a>
 										</div>
 										<div class="media">
-											<a href="file:///C:/Users/7ll%27/Documents/GitHub/operaeventts.github.io/images/IMG-20190520-WA0002.jpg"><img src="file:///C:/Users/7ll%27/Documents/GitHub/operaeventts.github.io/images/IMG-20190520-WA0002.jpg" title="This right here is a caption." /></a>
+											<a href="images/IMG-20190520-WA0002.jpg"><img src="images/IMG-20190520-WA0002.jpg" title="This right here is a caption." /></a>
 										</div>
 										<div class="media">
-											<a href="file:///C:/Users/7ll%27/Documents/GitHub/operaeventts.github.io/images/thumbs/IMG-20190531-WA0054.jpg"><img src="file:///C:/Users/7ll%27/Documents/GitHub/operaeventts.github.io/images/thumbs/IMG-20190531-WA0054.jpg" alt="" title="This right here is a caption." /></a>
+											<a href="images/thumbs/IMG-20190531-WA0054.jpg"><img src="images/thumbs/IMG-20190531-WA0054.jpg" alt="" title="This right here is a caption." /></a>
 										</div>
 										<div class="media">
-											<a href="file:///C:/Users/7ll%27/Documents/GitHub/operaeventts.github.io/images/Capture.PNG"><img src="file:///C:/Users/7ll%27/Documents/GitHub/operaeventts.github.io/images/Capture.PNG" alt="" title="This right here is a caption." /></a>
+											<a href="images/Capture.PNG"><img src="images/Capture.PNG" alt="" title="This right here is a caption." /></a>
 										</div>
 										<div class="media">
 											<a href="file:///C:/Users/7ll%27/Documents/GitHub/operaeventts.github.io/images/thumbs/IMG-20190531-WA0052.jpg"><img src="file:///C:/Users/7ll%27/Documents/GitHub/operaeventts.github.io/images/thumbs/IMG-20190531-WA0052.jpg" alt="" title="This right here is a caption." /></a>
