--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 											<a href="images/Capture.PNG"><img src="images/Capture.PNG" alt="" title="This right here is a caption." /></a>
 										</div>
 										<div class="media">
-											<a href="file:///C:/Users/7ll%27/Documents/GitHub/operaeventts.github.io/images/thumbs/IMG-20190531-WA0052.jpg"><img src="file:///C:/Users/7ll%27/Documents/GitHub/operaeventts.github.io/images/thumbs/IMG-20190531-WA0052.jpg" alt="" title="This right here is a caption." /></a>
+											<a href="images/thumbs/IMG-20190531-WA0052.jpg"><img src="images/thumbs/IMG-20190531-WA0052.jpg" alt="" title="This right here is a caption." /></a>
 										</div>
 										
 									</div>
