--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
 							<!-- Social -->
 								<div class="social column">
 									<h3>About us</h3>
-									<p>Mus sed interdum nunc dictum rutrum scelerisque erat a parturient condimentum potenti dapibus vestibulum condimentum per tristique porta. Torquent a ut consectetur a vel ullamcorper a commodo a mattis ipsum class quam sed eros vestibulum quisque a eu nulla scelerisque a elementum vestibulum.</p>
+									<p>Fresh ideas, new trends in events and entertainment, meticulous detailing, 24x7 work attitude, presence of mind and passion for perfectionism to bring in a methodology in the madness are just some of the reasons that makes an event successful.
+
+Every event is unique and every moment is special. In this age of customization and exclusivity, we believe in customized themes for every event wherein from folks to props, from stage to table arrangements, from dress code to décor, everything speaks the same language.</p>
 									<p>Aliquet dolor ultricies sem rhoncus dolor ullamcorper pharetra dis condimentum ullamcorper rutrum vehicula id nisi vel aptent orci litora hendrerit penatibus erat ad sit. In a semper velit eleifend a viverra adipiscing a phasellus urna praesent parturient integer ultrices montes parturient suscipit posuere quis aenean. Parturient euismod ultricies commodo arcu elementum suspendisse id dictumst at ut vestibulum conubia quisque a himenaeos dictum proin dis purus integer mollis parturient eros scelerisque dis libero parturient magnis.</p>
 									<h3>Follow us</h3>
 									<ul class="icons">
